# otus-homework8

./: CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp
.github/workflows/: release.yml
